# rust_lib_demo

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: lib.rs
