[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
crate-type = ["cdylib"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-Wl,-z,relro,-z,now"]

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "link-arg=-Wl,-z,relro,-z,now,-z,noexecstack,-z,defs"]
